- fixed position of back to all products arrow - changed order of settings.json options - added tagline color setting - made some tweaks to cart elements - fixed contact name/email floating bug - added styles for ul/ol elements on custom pages/product descriptions - a few slideshow tweaks - layout positioning tweaks - specified checkout page fonts in settings.json - footer spacing fixes

--- a/source/stylesheets/_mixins.css.sass
+++ b/source/stylesheets/_mixins.css.sass
@@ -4,6 +4,7 @@
 $primary-color: #{'{{ theme.primary_color }}'}
 $secondary-color: #{'{{ theme.secondary_color }}'}
 $background-color: #{'{{ theme.background_color }}'}
+$tagline-color: #{'{{ theme.tagline_color }}'}
 
 $fallback-fonts: "Lato", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif
 $primary-font: "#{'{{ theme.primary_font }}'}", $fallback-fonts
