--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -19,12 +19,12 @@
   h2 
     font-size: 32px
     line-height: 32px
-    margin-top: 0px
+    margin-top: 0
   
   .continue_shopping 
     display: none
     float: left
-    margin-left: 0px
+    margin-left: 0
   
   .cart_footer 
     text-align: right
@@ -72,6 +72,7 @@
   
   .wrapper-dropdown  
     height: 48px
+    line-height: 48px
     margin-bottom: 0
     width: 100%
   
@@ -149,7 +150,6 @@
         max-height: 120px
         max-width: 120px
         width: auto
-        margin: 0 auto
         
         @media screen and (max-width: $break-medium)
           max-width: 60px
@@ -166,7 +166,7 @@
       width: auto
       
       @media screen and (max-width: $break-medium)
-        max-width: 50%
+        max-width: 42%
       
       a  
         @include vertical-align
@@ -192,13 +192,13 @@
       @include vertical-align
       
       @media screen and (max-width: $break-medium)
-        max-width: 50%
+        max-width: 58%
         
       div 
         display: inline-block
 
         &.quantity 
-          width: 65px
+          width: 55px
           
           input[type='text'] 
             height: 56px
@@ -279,7 +279,7 @@
 #cart 
   
   .cart_holder  
-    border: 0px
+    border: 0
    
   .cart_content  
     padding: 20px 0 100px
