--- a/source/stylesheets/contact.css.sass
+++ b/source/stylesheets/contact.css.sass
@@ -42,7 +42,13 @@
     @media screen and (max-width: $break-small)
       display: block
       width: 100%
-
+  
+  .contact_name
+    float: left
+    
+    @media screen and (max-width: $break-small)
+      float: none
+      
   .contact_email
     float: right
     
