--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -144,6 +144,7 @@ label
   font: 1.125em $primary-font
   font-weight: 900
   height: 56px
+  line-height: 56px
   margin-bottom: 20px
   position: relative
   width: 380px
@@ -202,6 +203,7 @@ label
       margin-bottom: 0
     
 .store_tagline
+  color: $tagline-color
   margin: 0 auto
   max-width: 1300px
   width: 100%
@@ -231,19 +233,33 @@ label
         line-height: 18px
 
 .no_slideshow
+  background-color: $secondary-color
   height: 300px
   
   @media screen and (max-width: $break-extra-small)
     height: 150px
   
 .flexslider
-  background-color: $secondary-color
   border: 0px
   border-radius: 0px
   -webkit-border-radius: 0px
   -moz-border-radius: 0px
   height: 100%
   margin-bottom: 0
+  
+  .slides
+    transform-style: preserve-3d
+    -webkit-transform-style: preserve-3d
+    
+    >li
+      transform: translateZ(0px)
+      -moz-transform: translateZ(0px)
+      -webkit-transform: translateZ(0px)
+    
+  .flex-viewport
+    transform-style: preserve-3d
+    -webkit-transform-style: preserve-3d
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC)
 
 .flex-direction-nav  
   display: none
@@ -258,12 +274,15 @@ label
   @media screen and (max-width: $break-medium)
     display: none
 
-.flex-control-paging li a, .flex-control-paging li a.flex-active, .flex-control-paging li a:hover  
-  text-indent: 0
+.flex-control-paging li a, .flex-control-paging li a.flex-active, .flex-control-paging li a:hover
   background: none
   box-shadow: none
-  padding: 1px 3px
+  -moz-box-shadow: none
+  -webkit-box-shadow: none
+  color: $tagline-color
   font-weight: 900
+  padding: 1px 3px
+  text-indent: 0
 
 .container 
   margin: auto
@@ -332,7 +351,6 @@ header
       @media screen and (max-width: $break-medium)
         max-width: 50%
         width: auto
-        top: 40%
       
       .nav_items 
         @include pie-clearfix 
@@ -370,13 +388,12 @@ header
             
             .up 
               @include all-transitions
-              width: 12px
-              height: 17px
               fill: $primary-color
-              position: relative
-              top: 3px
-              right: -5px
-        
+              float: right
+              height: 17px
+              margin-left: 8px
+              width: 12px
+
         .open_cart
           svg 
             @include all-transitions
@@ -483,33 +500,36 @@ footer
     height: 100%
     max-height: 200px
   
-  .container  
+  .container
     @include pie-clearfix
-    padding-top: 15px
-  
+    @include vertical-align
+
   a, a:hover, a:active, a:focus
     color: $background-color
 
   .footer_credit
+    line-height: 24px
     text-align: right
-  
+    
+  .footer_name
+    line-height: 24px
+    text-align: left
+    
   .footer_section
-    display: inline-block
+    float: left
     max-width: 33%
-    padding-top: 8px
     width: 33%
     
     @media screen and (max-width: $break-medium)
-      display: block
+      float: none
       margin: 18px 0
       max-width: 100%
       padding: 0
       text-align: center
       width: 100%
   
-  .footer_social
-    padding-top: 6px
-    
+
+  
 .social_links
   text-align: center
   
@@ -517,10 +537,13 @@ footer
     display: inline-block
     margin: 0 10px
     
-    svg  
-      height: 24px
-      width: 24px
-      fill: $background-color
+    a
+      display: block
+    
+      svg  
+        height: 22px
+        width: 22px
+        fill: $background-color
     
 #maintenance, #checkout 
   position: absolute
@@ -544,5 +567,15 @@ footer
 .custom .page_content  
   max-width: 800px
   
+  ol, ul
+    margin: 1em 0
+    padding-left: 1em
+    
+  ul
+    list-style: disc
+  
+  ol
+    list-style: decimal
+    
   img  
     max-width: 100%
