--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -25,6 +25,18 @@
     line-height: 24px
     margin-top: 10px
     
+  .product_description
+  
+    ol, ul
+      margin: 1em 0
+      padding-left: 1em
+      
+    ul
+      list-style: disc
+    
+    ol
+      list-style: decimal
+      
   .product_form  
     @include pie-clearfix
     
@@ -42,6 +54,7 @@
     float: left
     height: 56px
     padding: 10px
+    text-align: center
     width: 50px
     
     @media screen and (max-width: $break-extra-small)
@@ -76,7 +89,7 @@
       @include all-transitions
       border-left: 2px solid $primary-color
       color: $primary-color
-      padding-left: 10px
+      padding-left: 15px
       right: 15px
     
     &:hover .price_info, &:focus .price_info 
@@ -124,28 +137,30 @@
 .mfp-title  
   display: none
 
-.back-to-all 
+.back_to_all
   @include all-transitions
+  display: inline-block
+  height: 25px
   font-size: 1em
   font-weight: 900
   margin-bottom: 20px
-  padding-left: 20px
-  position: relative
 
   svg 
     @include all-transitions
+    @include vertical-align
     fill: $primary-color
-    height: 12px
-    left: 0
-    position: absolute
-    top: 5px
-    width: 13px
+    height: 14px
   
   &:hover 
     color: $secondary-color
     
     svg 
       fill: $secondary-color
+      
+  span
+    @include vertical-align
+    display: inline-block
+    margin-left: 10px
       
 .fixed
   position: fixed
