--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -75,8 +75,9 @@
               font-size: 1.1em
           
           small
+            font-size: 1em
             font-weight: 900
-            font-size: 90%
+            
             
           small + small 
             color: $secondary-color
